--- a/programme/index.html
+++ b/programme/index.html
@@ -39,7 +39,7 @@
     </table>
 
     <h2>Conference Programme</h2>
-<p>The programme and workshop details will be announced shortly after registration has closed. 
+<p>The programme and workshop details will be announced shortly after registration has closed. The main conference will include talks from our plenary speakers, Professor Elva Robinson (University of York) and Professor Alistair Lawrence (SRUC), and this year's Chris Barnard award winner, Dr Patrick Kennedy (University of Bristol).
 <br />
 <br />
 <br />
