--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     <h2>Welcome!</h2>
     <p>
-Welcome to website for the <a href="https://www.asab.org/">Association for the Study of Animal Behaviour</a>&rsquo;s Spring Conference 2026. This year, the conference will be held at the University of Bristol in the beautiful southwest of England, on <b>Tuesday 24th and Wednesday 25th March</b>. There will also be a <b>workshop</b> preceding the conference, on <b>Monday 23rd March</b>, on the theme of 'ethics and integrity in animal behaviour research'.
+Welcome to website for the <a href="https://www.asab.org/" target="_blank">Association for the Study of Animal Behaviour</a>&rsquo;s Spring Conference 2026. This year, the conference will be held at the University of Bristol in the beautiful southwest of England, on <b>Tuesday 24th and Wednesday 25th March</b>. There will also be a <b>workshop</b> preceding the conference, on <b>Monday 23rd March</b>, on the theme of 'ethics and integrity in animal behaviour research'.
 </p>
 <p>
 The Spring conference is traditionally a postgraduate and ECR-focussed conference, and is a gentle, relaxed introduction to the conference circuit for many early career scientists, with career training available in the workshop and during the conference. It&rsquo;s an excellent way to build a network of peers within the animal behaviour community.
 </p>
 <p>
-The conference will be held on the main campus of the University of Bristol, in the thriving student heart of the city. The University of Bristol has a rich and vibrant history of animal behaviour research, with research primarily focussed in the <a href="https://www.bristol.ac.uk/biology/research/behaviour/">School of Biological Sciences</a> and the <a href="https://www.bristol.ac.uk/vet-school/research/welfare-behaviour/">Bristol Veterinary School</a>, with research links to many other departments in the University, and we look forward to welcoming you to our beautiful city.
+The conference will be held on the main campus of the University of Bristol, in the thriving student heart of the city. The University of Bristol has a rich and vibrant history of animal behaviour research, with research primarily focussed in the <a href="https://www.bristol.ac.uk/biology/research/behaviour/" target="_blank">School of Biological Sciences</a> and the <a href="https://www.bristol.ac.uk/vet-school/research/welfare-behaviour/" target="_blank">Bristol Veterinary School</a>, with research links to many other departments in the University, and we look forward to welcoming you to our beautiful city.
 </p>
 
     <h2>Contact</h2>
@@ -56,7 +56,7 @@ The conference will be held on the main campus of the University of Bristol, in 
 
     <footer>
         &copy; ASAB Spring Conference Organizers 2026
-        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce" target="_blank">Mike Pierce</a>
     </footer>
 
 </body>
