--- a/registration/index.html
+++ b/registration/index.html
@@ -42,7 +42,7 @@
 
 <p><b>Abstract submission</b> is open (see below), and closes on 1st February 2026.
 <p><b>Registration</b> opens on 1st January 2026, and closes on 19th February 2026. Registration for the conference and workshop (including refreshments and social events) will cost <b>£75</b> for <b>undergraduate/postgraduate/unwaged attendees</b>, or <b>£90</b> for <b>all other attendees</b>.
-<p>ASAB offers <b><a href="https://www.asab.org/conference-grants">conference attendance grants</a></b> for eligible conference attendees (where many postgraduates and other ECRs are likely to be eligible) - the deadline for applying for one of these is <b>1st February 2026</b>. In addition to Conference Attendance Grants, ASAB also gives Accessibility and Childcare Grants to facilitate conference attendance. Details of all of these, including application links, are available at the main <a href="https://www.asab.org/conference-grants">ASAB Grant</a> site. Successful grant applications will be announced shortly after the deadline.
+<p>ASAB offers <b><a href="https://www.asab.org/conference-grants" target="_blank">conference attendance grants</a></b> for eligible conference attendees (where many postgraduates and other ECRs are likely to be eligible) - the deadline for applying for one of these is <b>1st February 2026</b>. In addition to Conference Attendance Grants, ASAB also gives Accessibility and Childcare Grants to facilitate conference attendance. Details of all of these, including application links, are available at the main <a href="https://www.asab.org/conference-grants" target="_blank">ASAB Grant</a> site. Successful grant applications will be announced shortly after the deadline.
 
     <h2>Abstract submission</h2>
     <p>
@@ -52,7 +52,7 @@
 
     <footer>
         &copy; ASAB Spring Conference Organizers 2026
-        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce" target="_blank">Mike Pierce</a>
     </footer>
 
 </body>
