--- a/programme/index.html
+++ b/programme/index.html
@@ -69,7 +69,7 @@
 <br />
     <footer>
         &copy; ASAB Spring Conference Organizers 2026
-        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce" target="_blank">Mike Pierce</a>
     </footer>
 
 </body>
