--- a/registration/index.html
+++ b/registration/index.html
@@ -41,7 +41,7 @@
     <br>
 
 <p><b>Abstract submission</b> is open (see below), and closes on 1st February 2026.
-<p><b>Registration</b> for the conference and workshop (including refreshments and social events) costs <b>£75</b> for <b>undergraduate/postgraduate/unwaged attendees</b>, or <b>£90</b> for <b>all other attendees</b>. Please go to our <a href="https://www.eventbrite.co.uk/e/asab-spring-conference-2026-tickets-1979344053346?aff=oddtdtcreator">Eventbrite page</a> to register. Registration closes on the <b>19th February 2026</b>b>.
+<p><b>Registration</b> for the conference and workshop (including refreshments and social events) costs <b>£75</b> for <b>undergraduate/postgraduate/unwaged attendees</b>, or <b>£90</b> for <b>all other attendees</b>. Please go to our <a href="https://www.eventbrite.co.uk/e/asab-spring-conference-2026-tickets-1979344053346?aff=oddtdtcreator">Eventbrite page</a> to register. Registration closes on the <b>19th February 2026</b>.
 <p>ASAB offers <b><a href="https://www.asab.org/conference-grants" target="_blank">conference attendance grants</a></b> for eligible conference attendees (where many postgraduates and other ECRs are likely to be eligible) - the deadline for applying for one of these is <b>1st February 2026</b>. In addition to Conference Attendance Grants, ASAB also gives Accessibility and Childcare Grants to facilitate conference attendance. Details of all of these, including application links, are available at the main <a href="https://www.asab.org/conference-grants" target="_blank">ASAB Grant</a> site. Successful grant applications will be announced shortly after the deadline.
 
     <h2>Abstract submission</h2>
