--- a/abstract_submission/index.html
+++ b/abstract_submission/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | ASAB Spring Conference 2026</title>
+    <title>Abstract Submission | ASAB Spring Conference 2026</title>
 </head>
 
 <body>
@@ -41,35 +41,17 @@
         </tr>
     </table>
 
-    <h2>Conference Programme</h2>
-<p>The programme and workshop details will be announced shortly after registration has closed. The main conference will include talks from our plenary speakers, Professor Elva Robinson (University of York) and Professor Alistair Lawrence (SRUC), and this year's Chris Barnard award winner, Dr Patrick Kennedy (University of Bristol).
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+    <br>
+
+    <h2>Abstract submission</h2>
+
+<p><b>Abstract submission</b> is open, and closes on <b>1st February 2026</b>. Please note that the deadline for applying for ASAB conference grants is also 1st February, and registration closes on the 19th February - see the <a href="registration">Registration</a> page for details of both of these. We aim to get decisions about your success in applying as soon as possible after the 1st February.
+
+    <p>
+       If the form below doesn't load, please try <a href=https://forms.office.com/e/HYumD9gJjE" target="_blank">this link</a>. If you are still unable to access it, or are experiencing any other problems, please <a href="mailto:asab-spring-conference2026@bristol.ac.uk">get in touch with us</a>. If you wish to alter an earlier submission, please submit the form again – we will consider the most recent version.
+    </p>
+    <iframe class="abstract_submission" src="https://forms.office.com/e/HYumD9gJjE"></iframe>
+
     <footer>
         &copy; ASAB Spring Conference Organizers 2026
         &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce" target="_blank">Mike Pierce</a>
