--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Abstract Submission and Registration</a>
+                <a title="Abstract Submission" href="abstract_submission">Abstract Submission</a>
+            </td>
+            <td class="navigation">
+                <a title="Register for the Conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
                 <a title="Conference Programme" href="programme">Programme</a> 
