--- a/registration/index.html
+++ b/registration/index.html
@@ -30,7 +30,10 @@
                 <a class="current" title="Conference Home Page" href=".">Home</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Abstract Submission and Registration</a>
+                <a title="Abstract Submission" href="abstract_submission">Abstract Submission</a>
+            </td>
+            <td class="navigation">
+                <a title="Register for the Conference" href="registration">Registration</a>
             </td>
             <td class="navigation">
                 <a title="Conference Programme" href="programme">Programme</a> 
@@ -40,15 +43,8 @@
 
     <br>
 
-<p><b>Abstract submission</b> is open (see below), and closes on 1st February 2026.
 <p><b>Registration</b> for the conference and workshop (including refreshments and social events) costs <b>£75</b> for <b>undergraduate/postgraduate/unwaged attendees</b>, or <b>£90</b> for <b>all other attendees</b>. Please go to our <a href="https://www.eventbrite.co.uk/e/asab-spring-conference-2026-tickets-1979344053346?aff=oddtdtcreator">Eventbrite page</a> to register. Registration closes on the <b>19th February 2026</b>.
 <p>ASAB offers <b><a href="https://www.asab.org/conference-grants" target="_blank">conference attendance grants</a></b> for eligible conference attendees (where many postgraduates and other ECRs are likely to be eligible) - the deadline for applying for one of these is <b>1st February 2026</b>. In addition to Conference Attendance Grants, ASAB also gives Accessibility and Childcare Grants to facilitate conference attendance. Details of all of these, including application links, are available at the main <a href="https://www.asab.org/conference-grants" target="_blank">ASAB Grant</a> site. Successful grant applications will be announced shortly after the deadline.
-
-    <h2>Abstract submission</h2>
-    <p>
-       If the form below doesn't load, please try <a href=https://forms.office.com/e/HYumD9gJjE" target="_blank">this link</a>. If you are still unable to access it, or are experiencing any other problems, please <a href="mailto:asab-spring-conference2026@bristol.ac.uk">get in touch with us</a>. If you wish to alter an earlier submission, please submit the form again – we will consider the most recent version.
-    </p>
-    <iframe class="abstract_submission" src="https://forms.office.com/e/HYumD9gJjE"></iframe>
 
     <footer>
         &copy; ASAB Spring Conference Organizers 2026
