--- a/programme/index.html
+++ b/programme/index.html
@@ -45,27 +45,55 @@
 <p>The programme and workshop details will be announced shortly after registration has closed. The main conference will include talks from our plenary speakers, Professor Elva Robinson (University of York) and Professor Alistair Lawrence (SRUC), and this year's Chris Barnard award winner, Dr Patrick Kennedy (University of Bristol).
 <br />
 <br />
+   <table>
+        <tr>
+            <td class="date" rowspan="2">
+                <img src="assets/elvarobinson.jpg" alt="Professor Elva Robinson">
+            </td>
+            <td class="title-special">
+                Professor Elva Robinson
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Elva Robinson is a Professor of Behavioural Ecology at the University of York, who studies the organisation of social groups and their interactions with the environment. Using ants as a model system, she combines theoretical modelling, laboratory behavioural studies, and long-term field experiments to decode the relationship between individual behaviours and adaptive group processes, under environmental change. Her research ranges from collective decision-making and social networks to the evolution of intergroup cooperation. To ensure real-world impact, Elva works closely with conservation professionals and land managers to translate her research outputs into actionable strategies on the ground.
+            </td>
+        </tr>
+    </table>
+   <table>
+        <tr>
+            <td class="date" rowspan="2">
+                <img src="assets/alistairlawrence.jpg" alt="Professor Alistair Lawrence">
+            </td>
+            <td class="title-special">
+                Professor Alistair Lawrence
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Alistair Lawrence has studied a diverse range of subjects including causes of abnormal behaviours in confined animals, maternal behaviour and physiology (pigs and sheep), prenatal stress and genetics as factors in health and welfare, and economics of animal welfare. Currently he has returned to the study of positive animal welfare which he studies in pigs and laboratory rats. His current interests in positive welfare are understanding how to induce and assess positive mental states in animals, and how to link positive experiences to outcomes such as resilience. He is also interested in animal welfare in the wider context of sustainability; he sees an important role for positive welfare in lifting aspirations for how animals are managed and used.
+            </td>
+        </tr>
+    </table>
+
+   <table>
+        <tr>
+            <td class="date" rowspan="2">
+                <img src="assets/patrickkennedy.jpg" alt="Dr Patrick Kennedy">
+            </td>
+            <td class="title-special">
+                Dr Patrick Kennedy
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                Patrick completed his PhD in 2019 in Seirian Sumner’s group, investigating cooperation and conflict in the wonderful wasps of Central and South America. The stinging then ceased, as he undertook a pain-free postdoc developing theoretical models of social evolution in Andy Radford’s group. He then returned enthusiastically to be stung again, examining social behaviour in wasps across Africa as a research fellow in Dustin Rubenstein’s group at Columbia (Marie Curie Fellowship and Junior Fellowship of the Simons Society of Fellows). He is now a lecturer at Bristol, where my new research group is exploring the strategic side of social behaviour - with a focus on wasps (working across Africa and Australia), cooperatively breeding birds, and genes embroiled in intragenomic conflict. <b>Patrick is the 2025 recipient of ASAB's <a href="https://www.asab.org/barnard">Chris Barnard Award</a> for Outstanding Contributions by a New Investigator</b>.
+            </td>
+        </tr>
+    </table>
+
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+
 <br />
 <br />
 <br />
