--- a/abstract_submission/index.html
+++ b/abstract_submission/index.html
@@ -45,18 +45,7 @@
 
     <h2>Abstract submission</h2>
 
-<p><b>Abstract submission</b> is open, and closes on <b>1st February 2026</b>. Please note that the deadline for applying for ASAB conference grants is also 1st February, and registration closes on the 19th February - see the <a href="registration">Registration</a> page for details of both of these. We aim to get decisions about your success in applying as soon as possible after the 1st February.
-
-    <p>
-       If the form below doesn't load, please try <a href=https://forms.office.com/e/HYumD9gJjE" target="_blank">this link</a>. If you are still unable to access it, or are experiencing any other problems, please <a href="mailto:asab-spring-conference2026@bristol.ac.uk">get in touch with us</a>. If you wish to alter an earlier submission, please submit the form again – we will consider the most recent version.
-    </p>
-    <iframe class="abstract_submission" src="https://forms.office.com/e/HYumD9gJjE"></iframe>
-
-    <footer>
-        &copy; ASAB Spring Conference Organizers 2026
-        &nbsp;|&nbsp; Based on a template by <a href="https://github.com/mikepierce" target="_blank">Mike Pierce</a>
-    </footer>
-
+<p><b>Abstract submission</b> closed on <b>1st February 2026</b>. 
 </body>
 </html>
 
