--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@ The Spring conference is traditionally a postgraduate and ECR-focussed conferenc
 The conference will be held on the main campus of the University of Bristol, in the thriving student heart of the city. The University of Bristol has a rich and vibrant history of animal behaviour research, with research primarily focussed in the <a href="https://www.bristol.ac.uk/biology/research/behaviour/" target="_blank">School of Biological Sciences</a> and the <a href="https://www.bristol.ac.uk/vet-school/research/welfare-behaviour/" target="_blank">Bristol Veterinary School</a>, with research links to many other departments in the University, and we look forward to welcoming you to our beautiful city.
 </p>
 
+<h2>Science Communication Competition</h2>
+<p>The Association for the Study of Animal Behaviour (ASAB) is running a science communication competition for our student members attending the ASAB Spring Meeting 2026! To enter the competition, use this <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLocWcnoLuTOHBSuk4mghcPd6sO-o8htK3yhsZFmrZjddleA/viewform?usp=dialog">form</a> to submit a 1-2 minute video presenting your cool animal behaviour research.
+
+<p><b>Eligibility & Criteria:</b>
+<ul>
+    <li>* Participants must be a University student - Undergraduate, Masters or PhD level</li>
+    <li>* The video must be about your own animal behaviour research</li>
+    <li>* You must have the rights to use all video footage contained in your video (e.g. any images/videos of animals should have been taken by you or be openly available under a Creative Commons license).</li>
+    <li>* Your video needs to include Closed Captions</li> 
+    <li>* Your video should not exceed 500MB</li>
+</ul>
+
+<p>The deadline for submissions is midnight (UK time) Friday 20th March 2026.
+
+<p>There will be two prizes of £100 - 1 decided by ASAB Council and 1 "people’s choice" to be judged at the ASAB Spring conference. As well as the cash prize, the winning videos will be featured on the ASAB website, newsletters, and social media accounts.
+
     <h2>Contact</h2>
 <p>Please send queries to <a href="mailto:asab-spring-conference2026@bristol.ac.uk">asab-spring-conference2026@bristol.ac.uk</a>
 
